@@ -1,3 +1,9 @@
+2009-05-13  kitone  <kitone@gna.org>
+
+	* plugins/actions/textcorrection/patternmanager.cc:
+	* plugins/actions/textcorrection/patternmanager.h:
+	Maintain order of patterns with the same name.
+
 2009-05-12  kitone  <kitone@gna.org>
 
 	* plugins/actions/textcorrection/Latn-fi.common-error.se-pattern.in:
